[metadata]
name = htbtool
version = 0.1.0
url = https://github.com/LucasVanHaaren/htbtool
# download_url = https://github.com/LucasVanHaaren/htbtool
author = vhash
author_email = vanhaaren.lucas+dev@gmail.com
license = GPL-3.0
license_files = LICENSE
description = CLI tool to manage pentest-related data on the hackthebox platform.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown; charset=UTF-8
keywords = hackthebox, htb, toolkit
classifiers =
    Development Status :: 3 - Alpha
	Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Utilities

[options]
packages =
    htbtool
    htbtool.commands
zip_safe = true
python_requires = >= 3.6
setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    click==7.1.2

[options.extras_require]
dev =
	flake8
    black

[options.entry_points]
console_scripts =
    htbtool = htbtool.__main__:main

[flake8]
max-complexity = 10
max-line-length = 88
exclude = 
	__pycache__,
	.env,
	.git,
	build,
	dist
